# tue_mobile_ui

./: .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Gruntfile.js  README.md  index.html  manifest.xml  package.json  package.xml  print_guide.odt  tue-manifest.xml  webserver.py
.github/: dependabot.yml
.github/workflows/: npm.yml
amigo_mobile_ui/: .jshintrc  Gruntfile.js  README.md  bower.json  package-lock.json  package.json  qrcode-gen.js  webpack.config.js
amigo_mobile_ui/app/: amigo.html  index.html
amigo_mobile_ui/app/scripts/: battery-manager.js  button-handler.js  canvas-teleop.js  continue.js  final.js  pagenav.js  pinghistory.js  presentation.js  ros-connect-amigo.js  skillserver.js  teleop.js  text-to-speech.js
amigo_mobile_ui/app/styles/: main.css  visualization.css
amigo_mobile_ui/test/: bower.json
challenge_open/: .gitignore  Gruntfile.js  README.md  bower.json  package-lock.json  package.json
challenge_open/app/: index.html
challenge_open/app/scripts/: app.js  run.js
challenge_open/app/styles/: main.css
challenge_open/app/views/: main.html
challenge_open/test/: karma.conf.js
cocktail_gui/: bower.json  gulpfile.js
cocktail_gui/app/: index.html
cocktail_gui/app/scripts/: main.js
cocktail_gui/app/styles/: main.css
doorbell/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  vue.config.js
doorbell/src/: App.css  App.js  App.vue  Doorbell.css  Doorbell.js
doorbell/src/components/: Doorbell.vue
ed/: .eslintrc  .gitignore  .jshintrc  Gruntfile.js  README.md  bower.json  package-lock.json  package.json  strip_trailing_spaces.bash  webpack.config.js
ed/app/: entry.js  index.html
ed/test/: bower.json
ed2/: .prettierignore  package-lock.json  package.json
ed2/src/: App.css  App.js  Dragbutton.js  FloatingHeadTeleop.css  FloatingHeadTeleop.js  FloatingTeleop.js  Navigationbar.css  Navigationbar.js  index.css  index.js
image_recognition/: index.html
include/js/: three.min.js  waterbug.js
launch/: amigo.launch  final.launch  hero.launch  new.launch  pico.launch  sergio.launch  start.launch
old/: final.html  frames.html  pico.html  sergio.html  visualization.html
src/: amigo.html  apple-touch-startup-image-320x460.xcf  continue.html  ed.html  final.html  graph.html  index.html  manifest.appcache  pico.html  require.html  visualization.html
src/css/: style.css
src/js/: battery-manager.js  button-handler.js  canvas-teleop.js  continue.js  final.js  main-amigo.js  pinghistory.js  ros-connect-amigo.js  skillserver.js  style.js  teleop-amigo.js  teleop.js  text-to-speech.js
src/scripts/: canvas-teleop.js  continue.js  ed.js  final.js  visualization.js
tue_mobile_ui/: .editorconfig  package-lock.json  package.json  webpack.config.js
tue_mobile_ui/app/: entry.js  index.ejs  index.html
utils/: .gitignore  Gruntfile.js  README.md  bower.json  package.json  qrcode-gen.js
utils/test/: bower.json
(+87 files in other folders)
