<?xml version="1.0"?>
<package>
  <name>tue_mobile_ui</name>
  <version>0.0.0</version>
  <description>The tue_mobile_ui package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mjpeg_server</run_depend>
  <run_depend>rosbridge_suite</run_depend>

</package>
