<?xml version="1.0"?>
<package>
  <name>tue_mobile_ui</name>
  <version>0.0.0</version>
  <description>The tue_mobile_ui package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>action_server_msgs</run_depend>
  <run_depend>cb_planner_msgs_srvs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>ed_msgs</run_depend>
  <run_depend>ed_gui_server_msgs</run_depend>
  <run_depend>ed_robocup_msgs</run_depend>
  <run_depend>ed_sensor_integration_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>head_ref_msgs</run_depend>
  <run_depend>rgbd_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tue_manipulation_msgs</run_depend>


</package>
