<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tue_mobile_ui</name>
  <version>0.0.0</version>
  <description>The tue_mobile_ui package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>action_server_msgs</exec_depend>
  <exec_depend>cb_base_navigation_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>ed_msgs</exec_depend>
  <exec_depend>ed_robocup_msgs</exec_depend>
  <exec_depend>ed_sensor_integration_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>head_ref_msgs</exec_depend>
  <exec_depend>rgbd_msgs</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tue_manipulation_msgs</exec_depend>


</package>
